--- a/BiodataCard/index.html
+++ b/BiodataCard/index.html
@@ -25,7 +25,7 @@
                     <div class="fav">
                         <p>
                             <span><img src="./question.png" alt="" height="40px" width="30px" class="right"></span>
-                            <span><img src="./first page.png" alt="" height="40px" width="35px"></span>
+                            <span><img src="./first page.png" alt="" height="40px" width="35px" class="right2"></span>
                         </p>
                         <p class="days">28 days</p>
                     </div>
@@ -89,7 +89,8 @@
                     <span>
                         <label for="">Description(240 words):</label>
                         <br />
-                        <input type="text" name="" id="" class="large-height1">
+                        <!-- <input type="text" name="" id="" class="large-height1"> -->
+                        <textarea name="" id="" cols="35" rows="6"></textarea>
                     </span>
                     <div class="inline">
                         <span>
@@ -100,8 +101,6 @@
                 </div>
             </div>
         </div>
-
-
 
 
 
@@ -119,160 +118,76 @@
                     <div class="fav">
                         <p>
                             <span><img src="./question.png" alt="" height="40px" width="30px" class="right"></span>
-                            <span><img src="./first page.png" alt="" height="40px" width="35px"></span>
+                            <span><img src="./first page.png" alt="" height="40px" width="35px" class="right2"></span>
                         </p>
                         <p class="days">28 days</p>
                     </div>
 
                 </div>
-                <div class="flex2 bottom">
+                <div class="flex2 bottom box1">
+                    <div class="flex2-1 box2"> <img src="./brd.png" alt="" height="100px" width="80px"></div>
+                    <div class="flex2-2 box3">
                     <p>
-                        <label for="" class="label-input">Name:</label>
+                        <label for="" class="label-input little-font">Name:</label>
                         <input type="text" class="input-text">
                         <br>
                     </p>
                     <p>
-                        <label for="" class="label-input">Age:</label>
+                        <label for="" class="label-input little-font">Age:</label>
                         <input type="number" class="input-text">
                         <br>
                     </p>
 
                     <p>
-                        <label for="" class="label-input">City:</label>
+                        <label for="" class="label-input little-font">City:</label>
+                        <input type="text" class="input-text">
+                        <br>
+                    </p>
+
+                    <p> 
+                        <label for="" class="label-input little-font">State:</label>
                         <input type="text" class="input-text">
                         <br>
                     </p>
 
                     <p>
-                        <label for="" class="label-input">State:</label>
+                        <label for="" class="label-input little-font">Education:</label>
                         <input type="text" class="input-text">
                         <br>
                     </p>
 
                     <p>
-                        <label for="" class="label-input">Education:</label>
-                        <input type="text" class="input-text">
-                        <br>
-                    </p>
-
-                    <p>
-                        <label for="" class="label-input">Income:</label>
+                        <label for="" class="label-input little-font">Income:</label>
                         <input type="number" class="input-text">
                         <br>
                     </p>
 
                     <p>
-                        <label for="" class="label-input">Religion(optional):</label>
+                        <label for="" class="label-input little-font">Religion(optional):</label>
                         <input type="text" class="input-text">
                         <br>
                     </p>
 
                     <p>
-                        <label for="" class="label-input">Caste(Optional):</label>
+                        <label for="" class="label-input little-font">Caste(Optional):</label>
                         <input type="text" class="input-text">
                         <br>
                     </p>
 
                     <p>
-                        <label for="" class="label-input">Hobbies:</label>
+                        <label for="" class="label-input little-font">Hobbies:</label>
                         <input type="text" class="input-text">
                         <br>
                     </p>
+                </div>
+                
                 </div>
                 <div class="flex2 class2">
                     <span>
                         <label for="">Description(240 words):</label>
                         <br />
-                        <input type="text" name="" id="" class="large-height1">
-                    </span>
-                    <div class="inline">
-                        <span>
-                            <button class="button">Send Your Bio Data</button>
-                            <button class="button">Contact Information</button>
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="flex1">
-            <div class="center">
-                <div class="flex2 fav-icon">
-
-                    <div class="fav radius">
-                        <p class="content">T</p>
-                    </div>
-                    <div class="fav br-center">
-                        <img src="./brd.png" alt="" height="40px" width="40px">
-                        <p class="looking">Looking for a Bride</p>
-                    </div>
-                    <div class="fav">
-                        <p>
-                            <span><img src="./question.png" alt="" height="40px" width="30px" class="right"></span>
-                            <span><img src="./first page.png" alt="" height="40px" width="35px"></span>
-                        </p>
-                        <p class="days">28 days</p>
-                    </div>
-
-                </div>
-                <div class="flex2 bottom">
-                    <p>
-                        <label for="" class="label-input">Name:</label>
-                        <input type="text" class="input-text">
-                        <br>
-                    </p>
-                    <p>
-                        <label for="" class="label-input">Age:</label>
-                        <input type="number" class="input-text">
-                        <br>
-                    </p>
-
-                    <p>
-                        <label for="" class="label-input">City:</label>
-                        <input type="text" class="input-text">
-                        <br>
-                    </p>
-
-                    <p>
-                        <label for="" class="label-input">State:</label>
-                        <input type="text" class="input-text">
-                        <br>
-                    </p>
-
-                    <p>
-                        <label for="" class="label-input">Education:</label>
-                        <input type="text" class="input-text">
-                        <br>
-                    </p>
-
-                    <p>
-                        <label for="" class="label-input">Income:</label>
-                        <input type="number" class="input-text">
-                        <br>
-                    </p>
-
-                    <p>
-                        <label for="" class="label-input">Religion(optional):</label>
-                        <input type="text" class="input-text">
-                        <br>
-                    </p>
-
-                    <p>
-                        <label for="" class="label-input">Caste(Optional):</label>
-                        <input type="text" class="input-text">
-                        <br>
-                    </p>
-
-                    <p>
-                        <label for="" class="label-input">Hobbies:</label>
-                        <input type="text" class="input-text">
-                        <br>
-                    </p>
-                </div>
-                <div class="flex2 class2">
-                    <span>
-                        <label for="">Description(240 words):</label>
-                        <br />
-                        <input type="text" name="" id="" class="large-height1">
+                        <!-- <input type="text" name="" id="" class="large-height1"> -->
+                        <textarea name="" id="" cols="35" rows="6"></textarea>
                     </span>
                     <div class="inline">
                         <span>
@@ -291,13 +206,109 @@
                         <p class="content">T</p>
                     </div>
                     <div class="fav br-center">
-                        <img src="./brd.png" alt="" height="40px" width="40px">
-                        <p class="looking">Looking for a Bride</p>
+                        <img src="./grm.png" alt="" height="40px" width="40px">
+                        <p class="looking">Looking for a Groom</p>
                     </div>
                     <div class="fav">
                         <p>
                             <span><img src="./question.png" alt="" height="40px" width="30px" class="right"></span>
-                            <span><img src="./first page.png" alt="" height="40px" width="35px"></span>
+                            <span><img src="./first page.png" alt="" height="40px" width="35px" class="right2"></span>
+                        </p>
+                        <p class="days">28 days</p>
+                    </div>
+
+                </div>
+                <div class="flex2 bottom box1">
+                    <div class="flex2-1 box2"><img src="./grm.png" alt="" height="100px" width="80px"></div>
+                    <div class="flex2-2 box3">
+                      <p>
+                        <label for="" class="label-input little-font">Name:</label>
+                        <input type="text" class="input-text">
+                        <br>
+                       </p>
+                    <p>
+                        <label for="" class="label-input little-font">Age:</label>
+                        <input type="number" class="input-text">
+                        <br>
+                    </p>
+
+                    <p>
+                        <label for="" class="label-input little-font">City:</label>
+                        <input type="text" class="input-text">
+                        <br>
+                    </p>
+
+                    <p>
+                        <label for="" class="label-input little-font">State:</label>
+                        <input type="text" class="input-text">
+                        <br>
+                    </p>
+
+                    <p>
+                        <label for="" class="label-input little-font">Education:</label>
+                        <input type="text" class="input-text">
+                        <br>
+                    </p>
+
+                    <p>
+                        <label for="" class="label-input little-font">Income:</label>
+                        <input type="number" class="input-text">
+                        <br>
+                    </p>
+
+                    <p>
+                        <label for="" class="label-input little-font">Religion(optional):</label>
+                        <input type="text" class="input-text">
+                        <br>
+                    </p>
+
+                    <p>
+                        <label for="" class="label-input little-font">Caste(Optional):</label>
+                        <input type="text" class="input-text">
+                        <br>
+                    </p>
+
+                    <p>
+                        <label for="" class="label-input little-font">Hobbies:</label>
+                        <input type="text" class="input-text">
+                        <br>
+                    </p>
+                </div>
+                </div>
+                <div class="flex2 class2">
+                    <span>
+                        <label for="">Description(240 words):</label>
+                        <br />
+                        <!-- <input type="text" name="" id="" class="large-height1"> -->
+
+                        <textarea name="" id="" cols="35" rows="6"></textarea>
+                    </span>
+                    <div class="inline">
+                        <span>
+                            <button class="button">Send Your Bio Data</button>
+                            <button class="button">Contact Information</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="flex1">
+            <div class="center">
+                <div class="flex2 fav-icon">
+
+                    <div class="fav radius">
+                        <p class="content">T</p>
+                    </div>
+                    <div class="fav br-center">
+                        <img src="./grm.png" alt="" height="40px" width="40px">
+                        <p class="looking">Looking for a Groom</p>
+                    </div>
+                    <div class="fav">
+                        <p>
+                            <span><img src="./question.png" alt="" height="40px" width="30px" class="right"></span>
+                            <span><img src="./first page.png" alt="" height="40px" width="35px" class="right2"></span>
                         </p>
                         <p class="days">28 days</p>
                     </div>
@@ -361,7 +372,9 @@
                     <span>
                         <label for="">Description(240 words):</label>
                         <br />
-                        <input type="text" name="" id="" class="large-height1">
+                        <!-- <input type="text" name="" id="" class="large-height1"> -->
+
+                        <textarea name="" id="" cols="35" rows="6"></textarea>
                     </span>
                     <div class="inline">
                         <span>
