--- a/BiodataCard/index.html
+++ b/BiodataCard/index.html
@@ -25,7 +25,7 @@
                     <div class="fav">
                         <p>
                             <span><img src="./question.png" alt="" height="40px" width="30px" class="right"></span>
-                            <span><img src="./first page.png" alt="" height="40px" width="35px" class="right2"></span>
+                            <span><img src="./clock.png" alt="" height="40px" width="35px" class="right2"></span>
                         </p>
                         <p class="days">28 days</p>
                     </div>
@@ -118,7 +118,7 @@
                     <div class="fav">
                         <p>
                             <span><img src="./question.png" alt="" height="40px" width="30px" class="right"></span>
-                            <span><img src="./first page.png" alt="" height="40px" width="35px" class="right2"></span>
+                            <span><img src="./clock.png" alt="" height="40px" width="35px" class="right2"></span>
                         </p>
                         <p class="days">28 days</p>
                     </div>
@@ -212,7 +212,7 @@
                     <div class="fav">
                         <p>
                             <span><img src="./question.png" alt="" height="40px" width="30px" class="right"></span>
-                            <span><img src="./first page.png" alt="" height="40px" width="35px" class="right2"></span>
+                            <span><img src="./clock.png" alt="" height="40px" width="35px" class="right2"></span>
                         </p>
                         <p class="days">28 days</p>
                     </div>
@@ -308,7 +308,7 @@
                     <div class="fav">
                         <p>
                             <span><img src="./question.png" alt="" height="40px" width="30px" class="right"></span>
-                            <span><img src="./first page.png" alt="" height="40px" width="35px" class="right2"></span>
+                            <span><img src="./clock.png" alt="" height="40px" width="35px" class="right2"></span>
                         </p>
                         <p class="days">28 days</p>
                     </div>
