--- a/BiodataCard/index.html
+++ b/BiodataCard/index.html
@@ -125,7 +125,7 @@
 
                 </div>
                 <div class="flex2 bottom box1">
-                    <div class="flex2-1 box2"> <img src="./brd.png" alt="" height="100px" width="80px"></div>
+                    <div class="flex2-1 box2"> <img src="./user.png" alt="" class="side-image"></div>
                     <div class="flex2-2 box3">
                     <p>
                         <label for="" class="label-input little-font">Name:</label>
@@ -219,7 +219,7 @@
 
                 </div>
                 <div class="flex2 bottom box1">
-                    <div class="flex2-1 box2"><img src="./grm.png" alt="" height="100px" width="80px"></div>
+                    <div class="flex2-1 box2"><img src="./user.png" alt="" class="side-image"></div>
                     <div class="flex2-2 box3">
                       <p>
                         <label for="" class="label-input little-font">Name:</label>
